# pxar

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  rootlogon.C
ana/: CMakeLists.txt  Makefile  PHCalibration.cc  PHCalibration.hh  PixInitFunc.cc  PixInitFunc.hh  PixUtil.cc  PixUtil.hh  anaFullTest.cc  anaFullTest.hh  anaGainPedestal.cc  anaGainPedestal.hh  anaPHValidation.cc  anaPHValidation.hh  anaScurve.cc  anaScurve.hh  anaTrim.cc  anaTrim.hh  rootlogon.C  test0.C  test3.C
cmake/: FindCython.cmake  FindFTD2XX.cmake  FindFTDI.cmake  FindROOT.cmake  Findlibusb-1.0.cmake  Platform.cmake  PrintSystemInformation.cmake  UseCython.cmake  config.cmake.h
core/: CMakeLists.txt
core/api/: api.cc  api.h  constants.h  datatypes.cc  datatypes.h  dictionaries.h  dut.cc  dut.h  exceptions.h  libpxar.cc  libpxar.h  libpxar.i
core/cython/: PyPxarCore.pxd  PyPxarCore.pyx  probedict.pxd  pxarCore.pxd  pxarCore.pyx  regdict.pxd  setup.py  test.py  test.sh  triggerdict.pxd
core/cython/type_problem.tmp/: Rectangle.cpp  Rectangle.h  rect.cpp  rect.pyx  setup.py  test.py  test.sh
core/decoder/: datapipe.cc  datapipe.h  datasource_evt.cc  datasource_evt.h
core/emulator/: datasource_dtb.cc  generator.cc  generator.h  hal.cc  rpc_calls.cpp  rpc_calls.h
core/ethernet/: EthernetInterface.cc  EthernetInterface.h
core/hal/: constants.h  datapipe.cc  datapipe.cc.orig  datapipe.h  datasource_dtb.cc  datasource_dtb.h  datasource_evt.h  dummy_hal.cc  dummy_pipe.cc  hal.cc  hal.h
core/python/: test.py
core/rpc/: nios_fallback.cpp  rpc.cpp  rpc.h  rpc_calls.cpp  rpc_calls.h  rpc_error.cpp  rpc_error.h  rpc_impl.h  rpc_io.h
core/usb/: USBInterface.h  USBInterface.libftd2xx.cc  USBInterface.libftdi.cc
core/utils/: constants.h  dictionaries.h  exceptions.h  helper.cc  helper.h  log.h  pxardllexport.h  timer.h
debug/: CMakeLists.txt  pxar.cpp  pxar.h  pxardaq.cc  takedata.cpp
devices/: CMakeLists.txt  hvsupply.h  hvsupply.iseg.cc  hvsupply.keithley237.cc  hvsupply.keithley2410.cc  hvsupply.keithley273.cc  rs232.c  rs232.cc  rs232.h
doc/: CMakeLists.txt
doc/reference/: Doxyfile.in
doc/usermanual/: .gitignore  glossary.tex  hwOverview.tex  installation.tex  introduction.tex  pxar-manual.tex  references.tex  swOverview.tex  symbols.tex  tests.tex  tutorial.tex  usertests.tex
gui/: CMakeLists.txt  PixGui.cc  PixGui.hh  PixMonitor.cc  PixMonitor.hh  PixMonitorFrame.cc  PixMonitorFrame.hh  PixParTab.cc  PixParTab.hh  PixTab.cc  PixTab.hh
main/: CMakeLists.txt  ConfigParameters.cc  ConfigParameters.hh  CurrentvsDac.cc  CurrentvsDac.hh  GlobalConstants.hh  PixGui.cc  PixGui.hh  PixInitFunc.cc  PixInitFunc.hh  PixLog.cc  PixLog.hh  PixModule.cc  PixModule.hh  PixMonitor.cc  PixMonitor.hh  PixParTab.cc  PixParTab.hh  PixRoc.cc  PixRoc.hh  PixSetup.cc  PixSetup.hh  PixTab.cc  PixTab.hh  PixTbm.cc  PixTbm.hh  PixTest.cc  PixTest.hh  PixTestAlive.cc  PixTestAlive.hh  PixTestCurrentVsDac.cc  PixTestCurrentVsDac.hh  PixTestDacDacScan.cc  PixTestDacDacScan.hh  PixTestDacScan.cc  PixTestDacScan.hh  PixTestDacScanCurrent.cc  PixTestDacScanCurrent.hh  PixTestDacScanPh.cc  PixTestDacScanPh.hh  (+77 more)
python/: cmdline.py  cmdline.sh  module_test.py  pxar_gui.py  pxar_helpers.py  pxar_plotter.py  run.sh  script.py  script.sh  test.py  test.sh  test_cmd.py  test_cmd.sh
scripts/: fullTest.C  phOpt.C  phdacdacscan.C  singleTest.C  spectrum.C
src/: CMakeLists.txt
src/api/: libpxar.cc  libpxar.h  pxar_rpc.h
src/pxar/: pxar.cpp
src/rpc/: rpc.cpp  rpc.h  rpc_calls.cpp  rpc_error.cpp  rpc_io.cpp  rpc_io.h
src/usb/: USBInterface.h  USBInterface.libftd2xx.cc  USBInterface.libftdi.cc
tests/: CMakeLists.txt  PixTest.cc  PixTest.hh  PixTestAlive.cc  PixTestAlive.hh  PixTestBB2Map.cc  PixTestBB2Map.hh  PixTestBB3Map.cc  PixTestBB3Map.hh  PixTestBB4Map.cc  PixTestBB4Map.hh  PixTestBBMap.cc  PixTestBBMap.hh  PixTestBareModule.cc  PixTestBareModule.hh  PixTestCmd.cc  PixTestCmd.hh  PixTestCurrentVsDac.cc  PixTestCurrentVsDac.hh  PixTestDacDacScan.cc  PixTestDacDacScan.hh  PixTestDacScan.cc  PixTestDacScan.hh  PixTestDaq.cc  PixTestDaq.hh  PixTestFactory.cc  PixTestFactory.hh  PixTestFullTest.cc  PixTestFullTest.hh  PixTestGainCalibration.hh  PixTestGainPedestal.cc  PixTestGainPedestal.hh  PixTestHighRate.cc  PixTestHighRate.hh  PixTestIV.cc  PixTestIV.hh  PixTestPattern.cc  PixTestPattern.hh  PixTestPh.cc  PixTestPh.hh  (+30 more)
tools/: CMakeLists.txt  decoder.cc  flash.cc  pxar.cpp  pxar.h  pxardaq.cc
tools/rpcgen/: .gitignore  Makefile  cpp_error.cpp  cpp_error.h  cpp_parser.cpp  cpp_parser.h  cpp_scanner.cpp  cpp_scanner.h  datatype.cpp  datatype.h  file.cpp  file.h  rpcgen.cpp  stdafx.h
usertests/: CMakeLists.txt  PixTestBBMap.cc  PixTestBareBBMap.cc  PixTestBareBBMap.hh  PixTestBarePretest.cc  PixTestBarePretest.hh  PixTestCmd.cc  PixTestCmd.hh  PixTestDacDacScanMultipix.cc  PixTestDacDacScanMultipix.hh  PixTestDacScanCurrent.cc  PixTestDacScanCurrent.hh  PixTestDacScanPh.cc  PixTestDacScanPh.hh  PixTestDacScanPix.cc  PixTestDacScanPix.hh  PixTestDacScanRoc.cc  PixTestDacScanRoc.hh  PixTestDacScanThr.cc  PixTestDacScanThr.hh  PixTestDoubleColumn.cc  PixTestDoubleColumn.hh  PixTestFPIXTest.cc  PixTestFPIXTest.hh  PixTestMap.cc  PixTestMap.hh  PixTestMapPh.cc  PixTestMapPh.hh  PixTestMapThr.cc  PixTestMapThr.hh  PixTestSetCalDel.cc  PixTestSetCalDel.hh  PixTestSetPh.cc  PixTestSetPh.hh  PixTestSetTrim.cc  PixTestSetTrim.hh  PixTestSetVana.cc  PixTestSetVana.hh  PixTestShowIana.cc  PixTestShowIana.hh  (+3 more)
util/: CMakeLists.txt  ConfigParameters.cc  ConfigParameters.hh  PHCalibration.cc  PixInitFunc.cc  PixInitFunc.hh  PixMonitor.cc  PixMonitor.hh  PixSetup.cc  PixSetup.hh  PixTestParameters.cc  PixTestParameters.hh  PixUtil.cc  PixUtil.hh  rsstools.cc  rsstools.hh  shist256.cc  shist256.hh
